--- a/DermaCare/DermaCare/Base.lproj/Main.storyboard
+++ b/DermaCare/DermaCare/Base.lproj/Main.storyboard
@@ -2228,6 +2228,9 @@
                                 <state key="normal" title="PROCESS">
                                     <color key="titleColor" red="0.081000365316867828" green="0.76635944843292236" blue="0.75223958492279053" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="WDf-Sf-U2N" kind="show" id="pgQ-OZ-xFV"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EUL-bz-xEa">
                                 <rect key="frame" x="85" y="293" width="205" height="50"/>
@@ -2247,6 +2250,9 @@
                                 <state key="normal" title="CONTACT US">
                                     <color key="titleColor" red="0.081000365316867828" green="0.76635944843292236" blue="0.75223958492279053" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="GdI-Hu-aKj" kind="show" id="hgs-Zy-s7i"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4n-Ml-QRQ">
                                 <rect key="frame" x="127" y="477" width="118" height="109"/>
@@ -2458,6 +2464,82 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3M8-pH-Y8R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3589.5999999999999" y="1525.1874062968518"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VEs-MW-rnb">
+            <objects>
+                <viewController id="WDf-Sf-U2N" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jha-hk-z9A">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="process" translatesAutoresizingMaskIntoConstraints="NO" id="3Zr-Ux-XwU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PROCESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jTP-8R-epk">
+                                <rect key="frame" x="149" y="42" width="77" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBq-DF-UA0">
+                                <rect key="frame" x="16" y="37" width="53" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="&lt; BACK">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="YHd-Wt-BOI" kind="presentation" id="cww-Mc-OTB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="QEM-lo-kUT"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="05d-ey-Xhw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4408.8000000000002" y="1461.3193403298351"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wFw-Pd-kam">
+            <objects>
+                <viewController id="GdI-Hu-aKj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AWX-Sw-E2v">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="contactus" translatesAutoresizingMaskIntoConstraints="NO" id="1rq-r6-AAp">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CONTACT US" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h68-u1-f1s">
+                                <rect key="frame" x="134" y="36" width="106" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="beM-rN-fZD">
+                                <rect key="frame" x="16" y="31" width="53" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="&lt; BACK">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="YHd-Wt-BOI" kind="presentation" id="U93-Kd-1K6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="FIf-AF-JYB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mak-rZ-l4f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5096.8000000000002" y="1574.6626686656673"/>
         </scene>
         <!--Diagnose Controller-->
         <scene sceneID="oc4-Wi-FIA">
@@ -3070,19 +3152,21 @@
         <image name="background" width="375" height="667"/>
         <image name="chat" width="228" height="406"/>
         <image name="consultwithdoctor" width="187" height="406"/>
+        <image name="contactus" width="187" height="406"/>
         <image name="diagnosis" width="187" height="406"/>
         <image name="docProfile" width="187" height="406"/>
         <image name="docRegistration" width="187" height="406"/>
         <image name="home" width="375" height="871"/>
         <image name="patientSet" width="187" height="406"/>
+        <image name="process" width="187" height="406"/>
         <image name="result" width="187" height="406"/>
         <image name="send button" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="H9p-aC-Wi9"/>
-        <segue reference="X9a-zf-FjO"/>
-        <segue reference="p7b-0U-PuQ"/>
-        <segue reference="71F-fe-3Jg"/>
+        <segue reference="cww-Mc-OTB"/>
+        <segue reference="H8S-nk-Lua"/>
+        <segue reference="02c-VV-vhf"/>
+        <segue reference="zZD-cK-02k"/>
         <segue reference="8XC-6Q-Gd5"/>
         <segue reference="Z78-Pj-ZhC"/>
         <segue reference="Q4d-yz-NfD"/>
